=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - Fix: change in calculation of recovery percentage broke calculations for
   partitioned tables causing table partitions not showing up

 - Fix: now also include unassigned shards (as 0% recovered) in calculation of
   recovery percentage which is displayed per table.
   Previously it could show '100% recovery done' even if there were still
   unassigned shards.

 - Label the master node in the cluster node list.

2015/12/15 0.17.0
=================

 - Display current shard recovery status on table info page. It shows the
   percentage of done recovery.

 - Updated calculation of underreplicated shards/records to work with the
   change in Crate server where shards in sys.shards table have a more fine
   granular state now and relocating shards are listed, too.

2015/12/15 0.16.2
=================

 - fix: Unavailable dependency `angular-truncate` module caused blank Admin UI.
   Switched to `angular-truncate-2` now.

2015/11/27 0.16.1
=================

 - fix: column headers where not shown in result table on console page
   when two or more columns with the same name were selected

2015/11/16 0.16.0
=================

 - The table list is now fully searchable and sorted by table name within
   its schemas.

 - fix: charts are not correctly displayed in Microsoft Edge browser.

 - UDC: identify anonymous user with cluster id.
   Both user id and cluster id are anonymous traits.
   Note: You can disable UDC via the `udc.enabled` setting on the Crate server.

2015/10/30 0.15.3
=================

 - fix: REPLICATED DATA at the overview page showed incorrect percentage of
   of replicated data when number of undereplicated records was higher than
   number of total records

2015/10/20 0.15.2
=================

 - fixed a bug that displays partitions that are not related to the selected
   table in the table-list.
